--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -7,3 +7,8 @@ homePageTitle=Home
 NotFound=Not Found
 NotFound.text=Sorry, but the requested resource is not available.
 NotFound.description=Please check the URL and try again.
+
+DisplayNotFound=Display Not Found
+
+otherPage=OtherPage
+
