URL for while, solved, theme changed for Sap_fiori_3

--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -10,5 +10,6 @@ NotFound.description=Please check the URL and try again.
 
 DisplayNotFound=Display Not Found
 
-otherPage=OtherPage
+ServicePage=Services
+TitleService=Home - Services
 
